--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to MLS - Property Listings</h1>
+        <h1>NexusLS</h1>
     </header>
     <main>
         <h2>Available Properties</h2>
