--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 MLS Website</p>
+        <p>&copy; 2025 NexusLS</p>
     </footer>
 </body>
 </html>
