--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         .bg-image {
-            background-image: url('path/to/your/galaxy-image.jpg');
+            background-image: url('https://live-production.wcms.abc-cdn.net.au/d0a2035284cf2384f86e1f3ca0ce3a14?impolicy=wcms_crop_resize&cropH=1125&cropW=2000&xPos=0&yPos=0&width=862&height=485');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
