--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         
         .bg-image {
-            background-image: url('path/to/your/galaxy-image.jpg');
+            background-image: url('Andromeda Galaxy.avif');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
