--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         
         .login-form button:hover {
-            background-color: #00796B;
+            background-color: #D4AF37;
         }
         
         .logo {
