--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         .login-form button {
             width: 200px;
             padding: 10px;
-            background-color: #009688;
+            background-color: #D4AF37;
             color: white;
             border: none;
             border-radius: 5px;
